# hard_api

./: .gitmodules  CMakeLists.txt  README.md
include/: hard_api.h
include/paillier/: base_paillier.h  hard_api.h  paillier.h  pynq.h
platform/: CMakeLists.txt
platform/pynq/: CMakeLists.txt  pynq_api.c  pynq_api.h
platform/pynq/drivers/: drivers.h  xdecrypt_top_hw.h  xload_param_top_hw.h
platform/pynq/include/pynq/: drivers.h
platform/pynq/include/pynq/drivers/: xencrypt_top_hw.h
platform/pynq/src/: pynq.cpp
src/: base_paillier.cpp  hard_api.cpp  pynq.cpp  xbnz_hwh.h
tests/: CMakeLists.txt  main.cpp
